// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid alignItems center 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid alignItems end 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid alignItems start 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid alignItems stretch 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid item desktop 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c11 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c13 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c14 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c3 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c3 {
    width: 8.333%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c4 {
    width: 16.666%;
  }
}

@media (min-width:768px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c5 {
    width: 25%;
  }
}

@media (min-width:768px) {
  .c6 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c6 {
    width: 33.333%;
  }
}

@media (min-width:768px) {
  .c7 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c7 {
    width: 41.6%;
  }
}

@media (min-width:768px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c8 {
    width: 50%;
  }
}

@media (min-width:768px) {
  .c9 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c9 {
    width: 58.333%;
  }
}

@media (min-width:768px) {
  .c10 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c10 {
    width: 66.666%;
  }
}

@media (min-width:768px) {
  .c11 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c11 {
    width: 75%;
  }
}

@media (min-width:768px) {
  .c12 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c12 {
    width: 83.333%;
  }
}

@media (min-width:768px) {
  .c13 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c13 {
    width: 91.666%;
  }
}

@media (min-width:768px) {
  .c14 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c14 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    0
  </div>
  <div
    className="c1 c3"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    1
  </div>
  <div
    className="c1 c4"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    2
  </div>
  <div
    className="c1 c5"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    3
  </div>
  <div
    className="c1 c6"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    4
  </div>
  <div
    className="c1 c7"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    5
  </div>
  <div
    className="c1 c8"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    6
  </div>
  <div
    className="c1 c9"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    7
  </div>
  <div
    className="c1 c10"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    8
  </div>
  <div
    className="c1 c11"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    9
  </div>
  <div
    className="c1 c12"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    10
  </div>
  <div
    className="c1 c13"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    11
  </div>
  <div
    className="c1 c14"
    data-component="GridItem"
  >
    Grid Item, desktop: 
    12
  </div>
</div>
`;

exports[`Grid item size 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  width: 8.333%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: 16.666%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 25%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  width: 33.333%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  width: 41.6%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  width: 50%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  width: 58.333%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  width: 66.666%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c11 {
  position: relative;
  box-sizing: border-box;
  width: 75%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  width: 83.333%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c13 {
  position: relative;
  box-sizing: border-box;
  width: 91.666%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c14 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 8.333%;
  }
}

@media (min-width:1200px) {
  .c3 {
    width: 8.333%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 16.666%;
  }
}

@media (min-width:1200px) {
  .c4 {
    width: 16.666%;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 25%;
  }
}

@media (min-width:1200px) {
  .c5 {
    width: 25%;
  }
}

@media (min-width:768px) {
  .c6 {
    width: 33.333%;
  }
}

@media (min-width:1200px) {
  .c6 {
    width: 33.333%;
  }
}

@media (min-width:768px) {
  .c7 {
    width: 41.6%;
  }
}

@media (min-width:1200px) {
  .c7 {
    width: 41.6%;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 50%;
  }
}

@media (min-width:1200px) {
  .c8 {
    width: 50%;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 58.333%;
  }
}

@media (min-width:1200px) {
  .c9 {
    width: 58.333%;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 66.666%;
  }
}

@media (min-width:1200px) {
  .c10 {
    width: 66.666%;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 75%;
  }
}

@media (min-width:1200px) {
  .c11 {
    width: 75%;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 83.333%;
  }
}

@media (min-width:1200px) {
  .c12 {
    width: 83.333%;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 91.666%;
  }
}

@media (min-width:1200px) {
  .c13 {
    width: 91.666%;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 100%;
  }
}

@media (min-width:1200px) {
  .c14 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item, size: 
    0
  </div>
  <div
    className="c1 c3"
    data-component="GridItem"
  >
    Grid Item, size: 
    1
  </div>
  <div
    className="c1 c4"
    data-component="GridItem"
  >
    Grid Item, size: 
    2
  </div>
  <div
    className="c1 c5"
    data-component="GridItem"
  >
    Grid Item, size: 
    3
  </div>
  <div
    className="c1 c6"
    data-component="GridItem"
  >
    Grid Item, size: 
    4
  </div>
  <div
    className="c1 c7"
    data-component="GridItem"
  >
    Grid Item, size: 
    5
  </div>
  <div
    className="c1 c8"
    data-component="GridItem"
  >
    Grid Item, size: 
    6
  </div>
  <div
    className="c1 c9"
    data-component="GridItem"
  >
    Grid Item, size: 
    7
  </div>
  <div
    className="c1 c10"
    data-component="GridItem"
  >
    Grid Item, size: 
    8
  </div>
  <div
    className="c1 c11"
    data-component="GridItem"
  >
    Grid Item, size: 
    9
  </div>
  <div
    className="c1 c12"
    data-component="GridItem"
  >
    Grid Item, size: 
    10
  </div>
  <div
    className="c1 c13"
    data-component="GridItem"
  >
    Grid Item, size: 
    11
  </div>
  <div
    className="c1 c14"
    data-component="GridItem"
  >
    Grid Item, size: 
    12
  </div>
</div>
`;

exports[`Grid item tablet 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c11 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c13 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c14 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 8.333%;
  }
}

@media (min-width:1200px) {
  .c3 {
    width: 8.333%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 16.666%;
  }
}

@media (min-width:1200px) {
  .c4 {
    width: 16.666%;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 25%;
  }
}

@media (min-width:1200px) {
  .c5 {
    width: 25%;
  }
}

@media (min-width:768px) {
  .c6 {
    width: 33.333%;
  }
}

@media (min-width:1200px) {
  .c6 {
    width: 33.333%;
  }
}

@media (min-width:768px) {
  .c7 {
    width: 41.6%;
  }
}

@media (min-width:1200px) {
  .c7 {
    width: 41.6%;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 50%;
  }
}

@media (min-width:1200px) {
  .c8 {
    width: 50%;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 58.333%;
  }
}

@media (min-width:1200px) {
  .c9 {
    width: 58.333%;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 66.666%;
  }
}

@media (min-width:1200px) {
  .c10 {
    width: 66.666%;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 75%;
  }
}

@media (min-width:1200px) {
  .c11 {
    width: 75%;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 83.333%;
  }
}

@media (min-width:1200px) {
  .c12 {
    width: 83.333%;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 91.666%;
  }
}

@media (min-width:1200px) {
  .c13 {
    width: 91.666%;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 100%;
  }
}

@media (min-width:1200px) {
  .c14 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    0
  </div>
  <div
    className="c1 c3"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    1
  </div>
  <div
    className="c1 c4"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    2
  </div>
  <div
    className="c1 c5"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    3
  </div>
  <div
    className="c1 c6"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    4
  </div>
  <div
    className="c1 c7"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    5
  </div>
  <div
    className="c1 c8"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    6
  </div>
  <div
    className="c1 c9"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    7
  </div>
  <div
    className="c1 c10"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    8
  </div>
  <div
    className="c1 c11"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    9
  </div>
  <div
    className="c1 c12"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    10
  </div>
  <div
    className="c1 c13"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    11
  </div>
  <div
    className="c1 c14"
    data-component="GridItem"
  >
    Grid Item, tablet: 
    12
  </div>
</div>
`;

exports[`Grid justify center 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid justify end 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid justify spaceAround 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid justify spaceBetween 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid justify spaceEvenly 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid justify start 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing l 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 8px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -8px;
  }

  .c0 > .c1 {
    padding: 8px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -8px;
  }

  .c0 > .c1 {
    padding: 8px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing m 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -6px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 6px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -6px;
  }

  .c0 > .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing s 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -4px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 4px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -4px;
  }

  .c0 > .c1 {
    padding: 4px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -4px;
  }

  .c0 > .c1 {
    padding: 4px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing xl 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 12px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -12px;
  }

  .c0 > .c1 {
    padding: 12px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -12px;
  }

  .c0 > .c1 {
    padding: 12px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing xs 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -1px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 1px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -1px;
  }

  .c0 > .c1 {
    padding: 1px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -1px;
  }

  .c0 > .c1 {
    padding: 1px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;

exports[`Grid spacing xxs 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  width: auto;
  -webkit-box-flex: initial;
  -webkit-flex-grow: initial;
  -ms-flex-positive: initial;
  flex-grow: initial;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -0px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding: 0px;
}

@media (min-width:768px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:1200px) {
  .c2 {
    width: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    margin: -0px;
  }

  .c0 > .c1 {
    padding: 0px;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin: -0px;
  }

  .c0 > .c1 {
    padding: 0px;
  }
}

<div
  className="c0"
  data-component="Grid"
>
  <div
    className="c1 c2"
    data-component="GridItem"
  >
    Grid Item
  </div>
</div>
`;
